       Canon PIXUS MP370   (EXPERIMENTAL)(*2)
       Canon SmartBase MP370  (EXPERIMENTAL)(*2)
       Canon MultiPASS MP370  (EXPERIMENTAL)(*2)
       Canon PIXUS MP375R  (EXPERIMENTAL)(*2)

       Canon MP390 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP390   (EXPERIMENTAL)(*2)
       Canon SmartBase MP390  (EXPERIMENTAL)(*2)
       Canon MultiPASS MP390  (EXPERIMENTAL)(*2)

       Canon MP470 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP470   (EXPERIMENTAL)(*2)
       Canon PIXMA MP476   (EXPERIMENTAL)(*2)

       Canon MP480 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP480   (EXPERIMENTAL)(*2)
       Canon PIXMA MP486   (EXPERIMENTAL)(*2)

       Canon MP490 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP490   (EXPERIMENTAL)(*2)
       Canon PIXMA MP492   (EXPERIMENTAL)(*2)
       Canon PIXUS MP493   (EXPERIMENTAL)(*2)
       Canon PIXMA MP495   (EXPERIMENTAL)(*2)
       Canon PIXMA MP496   (EXPERIMENTAL)(*2)
       Canon PIXMA MP497   (EXPERIMENTAL)(*2)
       Canon PIXMA MP498   (EXPERIMENTAL)(*2)
       Canon PIXMA MP499   (EXPERIMENTAL)(*2)

       Canon MP700 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP700   (EXPERIMENTAL)(*2)
       Canon SmartBase MP700 (EXPERIMENTAL)(*2)
       Canon MultiPASS MP700 (EXPERIMENTAL)(*2)

       Canon MP710 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP710   (EXPERIMENTAL)(*2)
       Canon SmartBase MP710 (EXPERIMENTAL)(*2)
       Canon MultiPASS MP710 (EXPERIMENTAL)(*2)

       Canon MP730 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP730   (EXPERIMENTAL)(*2)
       Canon SmartBase MP730 (EXPERIMENTAL)(*2)
       Canon MultiPASS MP730 (EXPERIMENTAL)(*2)

       Canon MP740 series  (EXPERIMENTAL)(*1)
       Canon PIXUS MP740   (EXPERIMENTAL)(*2)
       Canon SmartBase MP740 (EXPERIMENTAL)(*2)
       Canon MultiPASS MP740 (EXPERIMENTAL)(*2)

       Canon MP750 series  (EXPERIMENTAL)(*1)

       Canon MP760 series  (EXPERIMENTAL)(*1)

       Canon MP770 series  (EXPERIMENTAL)(*1)